# suap-api-wrapper-python

./: .gitignore  404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
autenticacao/: index.html
biblioteca/: index.html
biblioteca/recursos-comum/: index.html
biblioteca/recursos-edu/: index.html
biblioteca/suap-client/: index.html
cli/: index.html
cli/comum/: index.html
cli/edu/: index.html
contribuindo/: index.html
docs/: autenticacao.md  contribuindo.md  excecoes.md  index.md  instalacao.md  plan.md  seguranca.md
docs/biblioteca/: index.md  recursos-comum.md  recursos-edu.md  suap-client.md
docs/cli/: comum.md  edu.md  index.md
docs/exemplos/: bot-notificacao.md  exportar-csv.md  index.md  relatorio-notas.md
excecoes/: index.html
exemplos/: index.html
exemplos/bot-notificacao/: index.html
exemplos/exportar-csv/: index.html
exemplos/relatorio-notas/: index.html
instalacao/: index.html
search/: search_index.json
seguranca/: index.html
specs/: end-points.json  mkdocs-plan.md  models.md  null-none-error.md  raw-response.md
suap_api/: __init__.py  cli.py  client.py  config.py  exceptions.py
suap_api/models/: __init__.py  base.py  comum.py  edu.py
suap_api/resources/: __init__.py  comum.py  edu.py  token.py
tests/: test_cli.py  test_client.py  test_config.py
