[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suap-api-wrapper"
version = "0.1.0"
description = "Python wrapper e CLI para a API v2 do SUAP"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28",
    "click>=8.0",
]

[project.scripts]
suap = "suap_api.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["suap_api"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
    "mypy>=1.0",
    "types-requests",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "pymdown-extensions>=10.0",
]
