[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "suap-api-wrapper"
version = "0.1.0"
description = "Python wrapper e CLI para a API v2 do SUAP — compatível com qualquer instituição que utilize o SUAP (IFPI, IFRN, IFCE, etc.)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
    { name = "Junio Alves", email = "frjunioalves@hotmail.com" },
]
maintainers = [
    { name = "Junio Alves", email = "frjunioalves@hotmail.com" },
]
keywords = [
    "suap",
    "api",
    "wrapper",
    "cli",
    "ifpi",
    "ifrn",
    "ifce",
    "educação",
    "rest",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Portuguese (Brazilian)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/Junio-Alves/suap-api-wrapper"
Repository = "https://github.com/Junio-Alves/suap-api-wrapper"
"Bug Tracker" = "https://github.com/Junio-Alves/suap-api-wrapper/issues"

[project.scripts]
suap = "suap_api.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["suap_api"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/docs",
    "/specs",
    "/tests",
    "/.github", # Boa prática excluir também arquivos do GitHub, se tiver
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "responses>=0.23",
    "mypy>=1.0",
    "types-requests",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "pymdown-extensions>=10.0",
]
